welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: Missing closing brace `}' assumed here
gauche()
^Balin:6: error: ';' expected but 'else' found.
else
^