welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
gauche()
gauche()
while (! estSurBiscuit) {
	avance()
}
else
{prendBiscuit()
